# Api/swagger-output.json
@@ -41,15 +41,38 @@
         }
       }
     },
-    "/test": {
-      "get": {
+    "/login": {
+      "post": {
         "tags": [
           "Accounts"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Login.",
+            "schema": {
+              "$ref": "#/definitions/Login"
+            }
+          }
+        ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Login success",
+            "schema": {
+              "$ref": "#/definitions/Accounts"
+            }
+          },
+          "500": {
+            "description": "Login failt",
+            "schema": {
+              "type": "string",
+              "example": "error",
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
@@ -82,6 +105,19 @@
         "phone",
         "password"
       ]
+    },
+    "Login": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "string"
+        },
+        "password": {
+          "type": "string",
+          "example": "string"
+        }
+      }
     }
   }
 }
